# yield-curve-watcher

./: LICENSE  README.md  pyproject.toml  requirements.txt
dashboard/: app.py
docs/plans/: 2026-03-02-signal-deduplication-design.md  2026-03-03-scheduled-runner-design.md  2026-03-03-scheduled-runner.md
examples/: config.example.yml
src/ycw/: cache.py  cli.py  config.py  pipeline.py  registry.py  scheduler.py  signal_history.py  types.py
src/ycw/backtest/: recession.py
src/ycw/fetchers/: base.py  fred_us.py
src/ycw/indicators/: base.py  credit.py  yieldcurve.py
src/ycw/notifiers/: base.py  console.py  slack_webhook.py
src/ycw/signals/: base.py  composite.py  logit_recession.py
src/ycw/utils/: fred.py
src/yieldcurvewatch.egg-info/: SOURCES.txt  requires.txt  top_level.txt
tests/: test_basic.py  test_cache.py  test_signal_history.py
