[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yieldcurvewatch"
version = "0.2.0"
description = "Modular yield-curve & credit-spread alerting, with logit probability and dashboard"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas",
    "requests",
    "PyYAML",
    "scikit-learn",
    "python-dateutil",
    "typing_extensions",
    "streamlit",
    "altair",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
